--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <button type="button" class="start_btn" onclick="init()">Start</button>
     <div id="webcam-container" class="webcam"></div>
     <div id="label-container" class="label"></div>
-    <h1><span id="count" class="count">0</span></h1>
+    
+    <div class="count">0</div>
+    
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <div id="myModal" class="modal">
