--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
         </div>
     </div>
 </body>
-<script src="js/js.js"></script>
+<script src="js/js.js" class="javaScript"></script>
 </html>
