--- a/Mask-Keeper-master/index.html
+++ b/Mask-Keeper-master/index.html
@@ -17,9 +17,9 @@
     
     <div class ="counting"> 
         <!-- 웹뷰 탐지 시에 카운팅 -->
-        <img id="maskOn" class="cntMask" src="maskon.png">
+        <img id="maskOn" class="cntMask" src="maskon.jpg">
         <div id="count_1" class="cntMask">0</div>
-        <img id="maskOff" class="cntMask" src="maskoff.png">
+        <img id="maskOff" class="cntMask" src="maskoff.jpg">
         <div id="count_2" class="cntMask">0</div>
     </div>
     <div id ="buttons">
