--- a/Mask-Keeper-master/index.html
+++ b/Mask-Keeper-master/index.html
@@ -11,11 +11,11 @@
 </head>
 <body class="index_body" id="index_body">
     <div class="dropdown">
-        <button onclick="dropdownclick()" class="dropbtn">menu</button>
+        <button onclick="dropdownclick()" class="dropbtn">三</button>
         <div id="myDropdown" class="dropdown-content">
         
-            <a onclick="imfo_f()">사용 방법</a>
-            <a onclick="intromask_f()">마스크 착용</a>
+            <a class ="dropdownBT" onclick="imfo_f()">사용 방법</a>
+            <a class ="dropdownBT" onclick="intromask_f()">마스크 착용</a>
         </div>
     </div>
 
